updated corrections
